--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ POSTGRES_PORT=5432
 GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=postgres://postgres:postgres@localhost:5432/marketplace
 GOOSE_MIGRATION_DIR=./db/migrations
+
+MARKET_HTTP_ADDRESS=0.0.0.0:6767
