--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,10 @@ GOOSE_DBSTRING=postgres://postgres:postgres@localhost:5432/marketplace
 GOOSE_MIGRATION_DIR=./db/migrations
 
 MARKET_HTTP_ADDRESS=0.0.0.0:6767
+MARKET_DB_DRIVER_NAME=postgres
+MARKET_DB_URI=postgres://postgres:postgres@localhost:5432/marketplace?sslmode=disable
+
+MARKET_AUTH_SECRET=my-super-auth-secret
+MARKET_TOKEN_VALID_SECONDS=900
+MARKET_REFRESH_TOKEN_VALID_SECONDS=604800
+MARKET_REFRESH_TOKEN_LENGTH=30
