--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ MARKET_AUTH_SECRET=my-super-auth-secret
 MARKET_TOKEN_VALID_SECONDS=900
 MARKET_REFRESH_TOKEN_VALID_SECONDS=604800
 MARKET_REFRESH_TOKEN_LENGTH=30
+
+MARKET_MAX_PAYLOAD_SIZE=10M
