Implement uploading images for listing

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ MARKET_REFRESH_TOKEN_VALID_SECONDS=604800
 MARKET_REFRESH_TOKEN_LENGTH=30
 
 MARKET_MAX_PAYLOAD_SIZE=10M
+MARKET_IMAGE_UPLOAD_DIR=uploads/images/
+MARKET_MAX_IMAGES_PER_LISTING=5
