Add empty json and form tags to dto so that linter chills out

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,6 +18,8 @@ linters:
       order:
           - json
           - form
+          - db
+          - validate
   exclusions:
     rules:
     - path: internal/auth/http/handlers # ignore for wrapcheck because 'return c.JSON( is echo convention and wrapcheck hates it
