Implement linking users with their seller accounts

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=postgres://postgres:postgres@localhost:5432/marketplace
 GOOSE_MIGRATION_DIR=./db/migrations
 
-MARKET_HTTP_ADDRESS=0.0.0.0:6764
+MARKET_HTTP_ADDRESS=0.0.0.0:6767
 MARKET_DB_DRIVER_NAME=postgres
 MARKET_DB_URI=postgres://postgres:postgres@localhost:5432/marketplace?sslmode=disable
 
@@ -19,3 +19,6 @@ MARKET_REFRESH_TOKEN_LENGTH=30
 MARKET_MAX_PAYLOAD_SIZE=10M
 MARKET_IMAGE_UPLOAD_DIR=uploads/images/
 MARKET_MAX_IMAGES_PER_LISTING=5
+
+STRIPE_SECRET_KEY=sk_testsk_test_51Rt...
+STRIPE_WEBHOOK_SECRET=whsec_eb212...
