Implement creating checkout session with added fee + payment going to seller account (dummy amounts for now)

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,6 +31,9 @@ linters:
     - path: pkg/responses
       linters:
         - wrapcheck
+    - path: internal/marketplace/paymentproviders/stripe
+      linters:
+        - exhaustruct
     generated: lax
 formatters:
   enable:
