Refactor auth to store refresh token in http only cookie

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ MARKET_AUTH_SECRET=my-super-auth-secret
 MARKET_TOKEN_VALID_SECONDS=900
 MARKET_REFRESH_TOKEN_VALID_SECONDS=604800
 MARKET_REFRESH_TOKEN_LENGTH=30
+MARKET_REFRESH_TOKEN_COOKIE_SECURE=true
 
 MARKET_MAX_PAYLOAD_SIZE=10M
 MARKET_IMAGE_UPLOAD_DIR=uploads/images/
