Start implementing oauth github

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ MARKET_MAX_IMAGES_PER_LISTING=5
 
 STRIPE_SECRET_KEY=sk_51Rt...
 STRIPE_WEBHOOK_SECRET=whsec_eb212...
+
+OAUTH_GITHUB_CLIENT_ID=xxx
+OAUTH_GITHUB_CLIENT_SECRET=yyy
+OAUTH_GITHUB_REDIRECT_URI=http://localhost:6767/api/v1/auth/github/callback
