Finalize github oatuh + add google oauth

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ STRIPE_WEBHOOK_SECRET=whsec_eb212...
 OAUTH_GITHUB_CLIENT_ID=xxx
 OAUTH_GITHUB_CLIENT_SECRET=yyy
 OAUTH_GITHUB_REDIRECT_URI=http://localhost:6767/api/v1/auth/github/callback
+
+OAUTH_GOOGLE_CLIENT_ID=xxx
+OAUTH_GOOGLE_CLIENT_SECRET=yyy
+OAUTH_GOOGLE_REDIRECT_URI=http://localhost:6767/api/v1/auth/google/callback
